public/css/index.css
/* Box Model Hack */
* {
    box-sizing: border-box;
}

/* Clear fix hack */
.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear {
   clear: both;
}

html {
    scroll-behavior: smooth;
  }
body {
    background-color: black;
    font-size: 62.5%;
    margin: 0;
}

#top-section {
    background: url("../images/gallery/P3.jpg"), rgba(22, 22, 22, 0.10);
    background-repeat: no-repeat;
    background-position: center center;
    background-size: cover;
    background-blend-mode: overlay;
}

h1 {
    font-size: 3.0em;
}

h2 {
    font-size: 2.5em;
}

h3 {
    font-size: 2em;
}


nav {
    font-size: 2.0em;
}

p {
    font-size: 1.5em;
}

a {
    text-decoration: none;
    color: white;
}

nav a {
    color: gray;
    padding: 15px;
}

nav a:hover {
    color: white;
}

.nav-button {
    display: none;
    background-color: white;
    color: black;
    font-size: 5.0em;
    width: 100%;
    height: 100%;
    text-align: center;
    padding: 5px;
    cursor: pointer;
}

.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: rgba(1,1,1, 0.75);
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
  }
  
  .sidebar a {
    padding: 20px 0px 0px 0px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s;
    text-align: center;
  }
  
  .sidebar a:hover {
    color: #f1f1f1;
  }
  
  .sidebar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }
  

.arrow {
    cursor: pointer;
    border-radius: 30px;
}

.service {
    display: inline-block;
    width: 50%;
    max-height: 25%;
}

@media only screen and (max-width: 1000px) {
    .service{
        width: 100% !important;
    }
    .hide {
        display: none;
    }
    header div h2 {
        display: none;
    }
    .nav-button {
        display: block;
    }
    .header {
        justify-content: space-between !important;
    }
 }

